# PhysicsEngine

./: .gitignore  CMakeLists.txt  README.md
src/: BoundingSphere.cpp  BoundingSphere.h  Collider.cpp  Collider.h  IntersectData.h  PhysicsEngine.cpp  PhysicsObject.cpp  PhysicsObject.h  Vector2.h  main  main.cpp
src/physics/: AABB.cpp  AABB.h  BoundingSphere.cpp  BoundingSphere.h  Collider.cpp  Collider.h  CollisionData.h  IntersectData.h  PhysicsEngine.cpp  PhysicsEngine.h  PhysicsObject.cpp  PhysicsObject.h  Plane.cpp  Plane.h  Vector2.h  Vector3.h
src/render/: Renderer.cpp  Renderer.h
